2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* SqlQueryView.cs: Show query results in the same view using a VPaned

2007-07-15  Ben Motmans <ben.motmans@gmail.com>

	* Commands/ToolCommands.cs, MonoDevelop.Database.Query.addin.xml: moved generator commands
	to GlueGenerator project

2007-07-14  Ben Motmans <ben.motmans@gmail.com>

	* SqlQueryView.cs: use MenuToolButton to display a list of stored connections +
	improved handling of query cancelling
	* QueryService.cs: small changes due to Mono.Data.Sql API updates

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* DataGrid/*: moved DataGrid control to Components project
	* QueryService.cs: helper service for easy database access
	* SqlQueryView.cs: View to execute SQL queries

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* DataGrid/*: new DataGrid implementation based on Gtk.TreeView, support for record navigation,
	data visualizers and different column types
	* QueryResultView.cs: View to visualize the result of a query, based on the new DataGrid