@@ -5,18 +5,18 @@
 	copyright	= "MIT X11"
 	url		= "http://www.monodevelop.com"
 	description	= "Database Query Module"
-	version		= "0.14.0">
+	version		= "0.15.0">
     
 	<Runtime>
 		<Import assembly="MonoDevelop.Database.Query.dll"/>
 	</Runtime>
 	
 	<Dependencies>
-		<Addin id="Core" version="0.14.0"/>
-		<Addin id="Core.Gui" version="0.14.0"/>
-		<Addin id="Ide" version="0.14.0"/>
-		<Addin id="MonoDevelop.Database.Sql" version="0.14.0"/>
-		<Addin id="Database.Components" version="0.14.0"/>
+		<Addin id="Core" version="0.15.0"/>
+		<Addin id="Core.Gui" version="0.15.0"/>
+		<Addin id="Ide" version="0.15.0"/>
+		<Addin id="Database.Sql" version="0.15.0"/>
+		<Addin id="Database.Components" version="0.15.0"/>
 	</Dependencies>
 	
 	<ExtensionPoint path = "/SharpDevelop/Views/SqlQueryView/ToolBar">
